--- a/template/package.json
+++ b/template/package.json
@@ -29,7 +29,11 @@
     {{/gitCommitMsg}}
     "build": "node build/ziuServer.js",
     "stg": "npm run build -- staging",
-    "testing": "npm run build -- testing"
+    "testing": "npm run build -- testing",
+    "zm": "ziu commit",
+    "img": "npm run ziu-img -- src",
+    "ziu-img": "ziu img",
+    "cl": "ziu cl -p angular -i CHANGELOG.md -s -r 1000 && git add CHANGELOG.md package.json"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -138,7 +142,8 @@
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "ziu": "^1.5.0"
   },
   {{#gitCommitMsg}}
   "husky": {
