--- a/template/package.json
+++ b/template/package.json
@@ -30,7 +30,7 @@
     "build": "node build/ziuServer.js",
     "stg": "npm run build -- staging",
     "testing": "npm run build -- testing",
-    "zm": "ziu commit",
+    "commit": "ziu commit",
     "img": "npm run ziu-img -- src",
     "ziu-img": "ziu img",
     "cl": "ziu cl -p angular -i CHANGELOG.md -s -r 1000 && git add CHANGELOG.md package.json"
